[project]
name = "breadcrumbs"
version = "0.2.0"
description = "Flight session inspector from EdgeTX logs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
    "psutil>=7.2.2",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
]

[project.scripts]
breadcrumbs = "breadcrumbs.ui.app_window:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/breadcrumbs"]
